# LAWA_AI_Engine

./: .env  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  README.md  docker-compose.yml
Database/: schema.sql
EventManager/: Dockerfile  main.py  requirements.txt
StreamHandler/: test_streamhandler.py
WebSocketService/: Dockerfile  server.py
ai-bird-eye-view/: Dockerfile  app.py  requirements.txt
ai-crowd-density/: Dockerfile  app.py
ai-in-out-person-count/: Dockerfile  app.py
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/ai_vms/: main.py
backend/ai_vms/config/: config_manager.py  development.py  logging_config.py  production.py  testing.py
backend/ai_vms/constant/: constants.py  email_templates.py
backend/ai_vms/crud/: auth.py  cameras.py  roles.py  usecases.py  users.py
backend/ai_vms/database/: database_connection.py
backend/ai_vms/models/: __init__.py  camera.py  camera_usecase.py  enums.py  resource.py  rolepermission.py  roles.py  scope.py  usecase_classes.py  usecases.py  users.py
backend/ai_vms/routes/: router.py
backend/ai_vms/routes/v1/: auth.py  cameras.py  roi.py  roles.py  router.py  stream.py  usecases.py  users.py
backend/ai_vms/schemas/: __init__.py  cameras.py  roi.py  roles.py  usecases.py  users.py
backend/ai_vms/services/v1/: camera_service.py  forgot_password_service.py  roi_service.py  roles_service.py  usecase_service.py  users_service.py
backend/ai_vms/utils/: email_service.py  encryption_util.py  hashing_service.py
backend/ai_vms/utils/auth/: app_auth_user.py  auth.py
(+166 files in other folders)
